--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -49,21 +49,32 @@
                                 </div>
                             </div>
                             <div>
-                                &nbsp;&nbsp;<span class=" ri-stop-mini-fill" style="color: #ff1741"></span>&nbsp;&nbsp;停机<span
-                                    class="float-right" style="margin-right:20px" th:text="${sumStop}">3</span>
+                                <a th:href="@{/instance_status}" style="color: #505d69">&nbsp;&nbsp;<span
+                                        class=" ri-stop-mini-fill" style="color: #ff1741"></span>&nbsp;&nbsp;停机<span
+                                        class="float-right" style="margin-right:20px"
+                                        th:text="${sumStop}">暂无数据</span></a>
+
                                 <hr style="margin:5px"/>
-                                &nbsp;&nbsp;<span class=" ri-play-mini-fill" style="color: #2bdfaa"></span>&nbsp;&nbsp;运行<span
-                                    class="float-right" style="margin-right:20px" th:text="${sumOperate}">5</span>
+                                <a th:href="@{/instance_status}" style="color: #505d69"> &nbsp;&nbsp;<span
+                                        class=" ri-play-mini-fill" style="color: #2bdfaa"></span>&nbsp;&nbsp;运行<span
+                                        class="float-right" style="margin-right:20px"
+                                        th:text="${sumOperate}">暂无数据</span></a>
                                 <hr style="margin:5px"/>
-                                &nbsp;&nbsp;<span class=" ri-record-circle-line" style="color: #efe24b"></span>&nbsp;&nbsp;空闲<span
-                                    class="float-right" style="margin-right:20px" th:text="${sumFree}">4</span>
+                                <a th:href="@{/instance_status}" style="color: #505d69"> &nbsp;&nbsp;<span
+                                        class=" ri-record-circle-line" style="color: #efe24b"></span>&nbsp;&nbsp;空闲<span
+                                        class="float-right" style="margin-right:20px"
+                                        th:text="${sumFree}">暂无数据</span></a>
                                 <hr style="margin:5px"/>
-                                &nbsp;&nbsp;<span class="dripicons-code"
-                                                  style="color: #0a83ff"></span>&nbsp;&nbsp;设定<span class="float-right"
-                                                                                                    style="margin-right:20px" th:text="${sumSet}">0</span>
+                                <a th:href="@{/instance_status}" style="color: #505d69"> &nbsp;&nbsp;<span
+                                        class="dripicons-code"
+                                        style="color: #0a83ff"></span>&nbsp;&nbsp;设定<span class="float-right"
+                                                                                          style="margin-right:20px"
+                                                                                          th:text="${sumSet}">暂无数据</span></a>
                                 <hr style="margin:5px"/>
-                                &nbsp;&nbsp;<span class="ri-wifi-off-fill"></span>&nbsp;&nbsp;离线<span
-                                    class="float-right" style="margin-right:20px" th:text="${sumOff}">2</span>
+                                <a th:href="@{/instance_status}" style="color: #505d69"> &nbsp;&nbsp;<span
+                                        class="ri-wifi-off-fill"></span>&nbsp;&nbsp;离线<span
+                                        class="float-right" style="margin-right:20px"
+                                        th:text="${sumOff}">暂无数据</span></a>
                                 <hr style="margin:5px"/>
                             </div>
                         </div>
@@ -74,16 +85,73 @@
                                     <h6 class="mt-0 mb-0 text-white ri-profile-fill">&nbsp;快捷菜单</h6>
                                 </div>
                             </div>
-                            <div class="row">
-                                <div class="col-lg-4 ml-1 pr-0" style="text-align: center">
-                                    <a class="btn btn-primary" href="#" role="button">Link</a>
+                            <div class="row" style="margin-left: 3%">
+                                <div class="col-lg-4 ml-1 pr-0" style="text-align: left">
+                                    <a class="btn btn-primary" th:href="@{/alarm_record}" role="button">报警信息</a>
                                 </div>
-                                <div class="col-lg-3 ml-1 pr-0" style="text-align: center">
-                                    <a class="btn btn-primary" href="#" role="button">Link</a>
+                                <div class="col-lg-3 ml-1 pr-0" style="text-align: left">
+                                    <a class="btn btn-primary" th:href="@{/count_analysis}" role="button">产量信息</a>
                                 </div>
-                                <div class="col-lg-3 ml-1 pr-0" style="text-align: center">
-                                    <a class="btn btn-primary" href="#" role="button">Link</a>
+                                <div class="col-lg-3 ml-1 pr-0" style="text-align: left">
+                                    <a class="btn btn-primary" th:href="@{/cutter}" role="button">刀具信息</a>
                                 </div>
+                            </div>
+                            <div class="row" style="margin-left: 3%">
+                                <div class="col-lg-4 ml-1 pr-0" style="text-align: left">
+                                    <a class="btn btn-primary" th:href="@{/device_parameter}" role="button">设备过程参数</a>
+                                </div>
+                                <div class="col-lg-3 ml-1 pr-0" style="text-align: left">
+                                    <a class="btn btn-primary" th:href="@{/time_analysis}" role="button">用时分析</a>
+                                </div>
+                                <div class="col-lg-3 ml-1 pr-0" style="text-align: left">
+                                    <a class="btn btn-primary" th:href="@{/productionplan}" role="button">生产计划</a>
+                                </div>
+                            </div>
+                            <div class="row" style="margin-left: 3%">
+                                <div class="col-lg-4 ml-1 pr-0" style="text-align: left">
+                                    <a class="btn btn-primary" th:href="@{/addPlan}" role="button">新增生产计划</a>
+                                </div>
+                                <div class="col-lg-3 ml-1 pr-0" style="text-align: left">
+                                    <a class="btn btn-primary" th:href="@{/addCutter}" role="button">新增刀具</a>
+                                </div>
+                                <div class="col-lg-3 ml-1 pr-0" style="text-align: left">
+                                    <a class="btn btn-primary" href="#" onclick="clockon()" role="button"
+                                       data-toggle="modal" data-target="#myModal">登录信息</a>
+                                </div>
+
+
+                                <!-- 模态框 -->
+                                <div class="modal fade" id="myModal">
+                                    <div class="modal-dialog modal-sm">
+                                        <div class="modal-content">
+
+                                            <!-- 模态框头部 -->
+                                            <div class="modal-header">
+                                                <h4 class="modal-title">登录信息</h4>
+                                                <button type="button" class="close" data-dismiss="modal"></button>
+                                            </div>
+
+                                            <!-- 模态框主体 -->
+                                            <div class="modal-body">
+                                                登录用户名：<p th:text="${session.username}">数据缺失</p>
+                                                <hr>
+                                                本次登录时间：<p id="loginTime" th:text="${session.loginTime}">数据缺失</p>
+                                                <p id="loginTimestamp" th:text="${session.loginTimestamp}" hidden>数据缺失</p>
+                                                <hr>
+                                                本次登录时长：<p id="timeLong">数据缺失</p>
+                                            </div>
+
+                                            <!-- 模态框底部 -->
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                                                    关闭
+                                                </button>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </div>
+
                             </div>
 
                         </div>
@@ -179,7 +247,8 @@
                         <div class="card">
                             <div class="card mb-0" style="background-color: #0a83ff">
                                 <div class="card-body pt-2 pb-0">
-                                    <h6 class="ri-pie-chart-2-fill text-white mt-0 mb-0" style="display: inline-block">&nbsp;设备用时比例</h6>
+                                    <h6 class="ri-pie-chart-2-fill text-white mt-0 mb-0" style="display: inline-block">
+                                        &nbsp;设备用时比例</h6>
                                     <span id="date" class="text-white"></span>
                                 </div>
                             </div>
@@ -845,3 +914,42 @@
 </body>
 
 </html>
+
+
+<script>
+    function clockon() {
+        var loginTime = $("#loginTimestamp").text()
+        var thistime = new Date();
+        // console.log(loginTime)
+
+        //时间差
+        diff = new Date();
+        // console.log("diff1:" + diff.getTime())
+        // console.log("loginTime:" + loginTime)
+        diff.setTime(Math.abs(thistime.getTime() - loginTime))
+        // console.log("diff2:" + diff.getTime())
+        timediff = diff.getTime();
+        hos = Math.floor(timediff / (1000 * 60 * 60));
+        mins = Math.floor(timediff / (1000 * 60));
+        secs = Math.floor(timediff / 1000);
+
+        if (secs > 59) {
+            secs = secs % 60;
+        }
+        if (mins > 59) {
+            mins = mins % 60;
+        }
+        if (eval(secs) < 10) {
+            secs = "0" + secs;
+        }
+        if (eval(mins) < 10) {
+            mins = "0" + mins;
+        }
+        if (eval(hos) < 10) {
+            hos = "0" + hos;
+        }
+        $("#timeLong").html(hos + ":" + mins + ":" + secs)
+
+        setInterval("clockon()",1000)
+    }
+</script>
