--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -1,150 +1,54 @@
-<!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-
+<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="utf-8"/>
-    <title>工业大数据平台</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="This is an industrial big data platform page" name="description"/>
-    <link rel="shortcut icon" href="../static/images/favicon.ico"><!-- jquery.vectormap css -->
-    <link href="../static/libs/admin-resources/jquery.vectormap/jquery-jvectormap-1.2.2.css" rel="stylesheet"
-          type="text/css"/><!-- DataTables -->
-    <link href="../static/libs/datatables.net-bs4/css/dataTables.bootstrap4.min.css" rel="stylesheet" type="text/css"/>
-    <!-- Responsive datatable examples -->
-    <link href="../static/libs/datatables.net-responsive-bs4/css/responsive.bootstrap4.min.css" rel="stylesheet"
-          type="text/css"/><!-- Bootstrap Css -->
-    <link href="../static/css/bootstrap.min.css" id="bootstrap-style" rel="stylesheet" type="text/css"/>
-    <!-- Icons Css -->
-    <link href="../static/css/icons.min.css" rel="stylesheet" type="text/css"/><!-- App Css-->
-    <link href="../static/css/app.min.css" id="app-style" rel="stylesheet" type="text/css"/>
-    <link href="../static/css/diy.css" rel="stylesheet" type="text/css"/>
-    <script src="../static/js/echarts.js"></script>
+    <title>Bootstrap 实例</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="../static/libs/jquery/jquery.min.js"></script>
+    <script src="../static/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <link href="../static/css/bootstrap.min.css" id="bootstrap-style" rel="stylesheet" type="text/css" /><!-- Icons Css -->
+    <link href="../static/css/icons.min.css" rel="stylesheet" type="text/css" /><!-- App Css-->
+    <link href="../static/css/app.min.css" id="app-style" rel="stylesheet" type="text/css" />
+    <link href="../static/css/diy.css" rel="stylesheet" type="text/css"/>
+<!--    <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>-->
+<!--    <script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>-->
+<!--    <script src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>-->
 </head>
+<body>
 
-<body data-sidebar="dark" class="bgc">
-<!-- Begin page -->
-<div id="layout-wrapper">
+<div class="container">
+    <h2>模态框实例</h2>
+    <!-- 按钮：用于打开模态框 -->
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+        打开模态框
+    </button>
 
-    <!--topbar and leftbar start-->
-    <div th:include="~{common::TopAndLeft}"></div>
+    <!-- 模态框 -->
+    <div class="modal fade" id="myModal">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
 
-    <div class="main-content">
-        <div class="page-content">
-            <div class="container-fluid"><!-- start page title -->
-                <div class="row">
-                    <div class="col-12">
-                        <div class="page-title-box d-flex align-items-center justify-content-between" style="margin-bottom: -20px">
-                            <h4 class="mb-0">
-                                生产计划</h4>
-                            <!--     无用的右侧标题                       -->
-                            <!--                            <div class="page-title-right">-->
-                            <!--                                <ol class="breadcrumb m-0">-->
-                            <!--                                    <li class="breadcrumb-item"><a href="javascript: void(0);">Ecommerce</a></li>-->
-                            <!--                                    <li class="breadcrumb-item active">Orders</li>-->
-                            <!--                                </ol>-->
-                            <!--                            </div>-->
-                        </div>
-                    </div>
-                </div><!-- end page title -->
-
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="card">
-                            <div class="card-body  pt-0">
-<!--                                查询-->
-                                <form class="form-inline mt-2" method="post" action="/productionplan"  onsubmit="return a()">
-                                    <div class="form-group mr-2">
-                                        <label for="startTime" class="mr-1">计划开始时间</label>
-                                        <input type="date" class="form-control" id="startTime" placeholder="2022-01-01">
-                                    </div>
-                                    <div class="form-group ml-2 mr-2">
-                                        <label for="endTime" class="mr-1">计划结束时间</label>
-                                        <input type="date" class="form-control" id="endTime" placeholder="2022-01-01">
-                                    </div>
-                                    <button type="submit" class="btn btn-primary">查询</button>
-                                </form>
-<!--                                查询-->
-                                <div class="table-responsive">
-                                    <table class="table table-centered datatable dt-responsive nowrap "
-                                           style="border-collapse: collapse; border-spacing: 0; width: 100%;">
-                                        <thead class="thead-light">
-                                        <tr>
-                                            <th>操作</th>
-                                            <th>计划编号</th>
-                                            <th>计划名称</th>
-                                            <th>状态</th>
-                                            <th>设备组</th>
-                                            <th>计划产量</th>
-                                            <th>合格产量</th>
-                                            <th>不合格产量</th>
-                                            <th>计划明细</th>
-                                            <th>机床型号</th>
-                                            <th>计划开始时间</th>
-                                            <th>计划结束时间</th>
-                                            <th>实际开始时间</th>
-                                            <th>实际结束时间</th>
-                                        </tr>
-                                        </thead>
-                                        <tbody th:each="item:${planList}">
-                                        <tr>
-                                            <td th:text="${item.getOperation()}">x</td>
-                                            <td th:text="${item.getPlanNumber()}">x</td>
-                                            <td th:text="${item.getPlanNumber()}">x</td>
-                                            <td th:text="${item.getState()}">x</td>
-                                            <td th:text="${item.getDevicegroup()}">x</td>
-                                            <td th:text="${item.getPlanNumber()}">x</td>
-                                            <td th:text="${item.getQualifiedYield()}">x</td>
-                                            <td th:text="${item.getDisqualifiedYield()}">x</td>
-                                            <td th:text="${item.getPlanDetails()}">x</td>
-                                            <td th:text="${item.getModelType()}">x</td>
-                                            <td th:text="${#dates.format(item.getPlannedstart(),'yyyy-MM-dd HH:mm:ss')}">x</td>
-                                            <td th:text="${#dates.format(item.getPlannedend(),'yyyy-MM-dd HH:mm:ss')}">x</td>
-                                            <td th:text="${#dates.format(item.getActualstart(),'yyyy-MM-dd HH:mm:ss')}">x</td>
-                                            <td th:text="${#dates.format(item.getActualend(),'yyyy-MM-dd HH:mm:ss')}">x</td>
-                                            <!--                                            <td>-->
-                                            <!--                                                <div class="badge badge-soft-success font-size-12">正常</div>-->
-                                            <!--                                            </td>-->
-                                            <!--                                            <td><a href="javascript:void(0);" class="mr-3 text-primary"-->
-                                            <!--                                                   data-toggle="tooltip" data-placement="top" title=""-->
-                                            <!--                                                   data-original-title="Edit"><i-->
-                                            <!--                                                    class="mdi mdi-pencil font-size-18"></i></a><a-->
-                                            <!--                                                    href="javascript:void(0);" class="text-danger" data-toggle="tooltip"-->
-                                            <!--                                                    data-placement="top" title="" data-original-title="Delete"><i-->
-                                            <!--                                                    class="mdi mdi-trash-can font-size-18"></i></a></td>-->
-                                            <!--                                        </tr>-->
-
-                                        </tbody>
-                                    </table>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                <!-- 模态框头部 -->
+                <div class="modal-header">
+                    <h4 class="modal-title">模态框头部</h4>
+                    <button type="button" class="close" data-dismiss="modal"></button>
                 </div>
+
+                <!-- 模态框主体 -->
+                <div class="modal-body">
+                    模态框内容..
+                </div>
+
+                <!-- 模态框底部 -->
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
+                </div>
+
             </div>
-        </div><!-- End Page-content -->
-    </div></div>
+        </div>
+    </div>
 
-</div><!-- End Page-content -->
+</div>
 
-
-<!-- Right bar overlay-->
-
-<script src="../static/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
-<script src="../static/libs/metismenu/metisMenu.min.js"></script>
-<script src="../static/libs/simplebar/simplebar.min.js"></script>
-<script src="../static/libs/node-waves/waves.min.js"></script><!-- apexcharts -->
-<script src="../static/libs/apexcharts/apexcharts.min.js"></script><!-- jquery.vectormap map -->
-<script src="../static/libs/admin-resources/jquery.vectormap/jquery-jvectormap-1.2.2.min.js"></script>
-<script src="../static/libs/admin-resources/jquery.vectormap/maps/jquery-jvectormap-us-merc-en.js"></script>
-<!-- Required datatable js -->
-<script src="../static/libs/datatables.net/js/jquery.dataTables.min.js"></script>
-<script src="../static/libs/datatables.net-bs4/js/dataTables.bootstrap4.min.js"></script><!-- Responsive examples -->
-<script src="../static/libs/datatables.net-responsive/js/dataTables.responsive.min.js"></script>
-<script src="../static/libs/datatables.net-responsive-bs4/js/responsive.bootstrap4.min.js"></script>
-<script src="../static/js/pages/dashboard.init.js"></script>
-<script src="../static/js/app.js"></script>
 </body>
-
 </html>
